[package]
name = "distortion"
version = "0.1.0"
edition = "2021"
authors = ["Marley Wallace <reyaw@protonmail.com>"]
license = "GPL-3.0-or-later"
homepage = "https://youtu.be/dQw4w9WgXcQ"
description = "Crunchy distortion plugin"

[workspace]
members = ["xtask"]

[lib]
crate-type = ["cdylib", "lib"]



[dependencies]
atomic_float = "0.1.0"
# Remove the `assert_process_allocs` feature to allow allocations on the audio
# thread in debug builds.
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["assert_process_allocs", "standalone"] }
nih_plug_vizia = { git = "https://github.com/robbert-vdh/nih-plug.git" }
# Uncomment the below line to disable the on-by-default VST3 feature to remove
# the GPL compatibility requirement
# nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", default_features = false, features = ["assert_process_allocs"] }

[profile.release]
lto = "thin"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
